#14: try fixing scrollbar using overflow: overlay

--- a/css/stylings.css
+++ b/css/stylings.css
@@ -5,6 +5,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 85%;
+	overflow-y: overlay;
 }
 
 a:link, a:visited {
